(1) Removed gap between title and filter bar - Resolves #74

--- a/static/style.css
+++ b/static/style.css
@@ -20,10 +20,13 @@ h1 {
 }
 
 h2 {
-    margin-bottom: 25px;
     font-weight: 100;
     color: #2c3e50;
     text-align: center;
+}
+
+header h2 {
+    margin-bottom: 25px;
 }
 
 p {
